--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-github-btn": "^1.2.0",
     "react-modal": "^3.13.1",
     "react-rnd": "^10.2.4",
+    "react-router": "^6.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
@@ -24,7 +25,7 @@
     "tailwindcss": "^2.1.1",
     "twin.macro": "^2.3.3"
   },
-  "homepage":"https://jayjayjetpain.github.io/CS5345-ProductWebsite",
+  "homepage": "https://jayjayjetpain.github.io/CS5345-ProductWebsite",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
